--- a/index.html
+++ b/index.html
@@ -12,26 +12,27 @@
 </head>
 <body class="body">
 <div class="container">
-    <p class="text text-title">...</p>
-    <p class="text text-description">...</p>
+    <p class="text text-title">Запись на диспансеризацию</p>
+    <p class="text text-description">Выбор даты и времени</p>
+    <p class="text text-description">Декабрь</p>
     <div class="day-grid">
         <div class="day-card">
-            <p class="text text-day-name">...</p>
-            <div class="text-day-number day-today">...</div>
+            <p class="text text-day-name">Пн</p>
+            <div class="text-day-number day-today">16</div>
         </div>
         <div class="day-card">
-            <p class="text text-day-name">...</p>
-            <div class="text-day-number selected">...</div>
+            <p class="text text-day-name">Вт</p>
+            <div class="text-day-number selected">17</div>
         </div>
     </div>
-    <p class="text text-day-full-name">...</p>
+    <p class="text text-day-full-name">17 декабря, 2024 г., вторник</p>
     <hr class="hr"/>
     <div class="time-grid">
-        <div class="time-card"><p class="text time-card-title">...</p></div>
-        <div class="time-card selected"><p class="text time-card-title">...</p></div>
+        <div class="time-card"><p class="text time-card-title">8:48</p></div>
+        <div class="time-card selected"><p class="text time-card-title">12:30</p></div>
         
     </div>
 </div>
-<div class="button"><p class="text button-text">...</p></div>
+<div class="button"><p class="text button-text">Записаться</p></div>
 </body>
 </html>
